--- a/public/index.html
+++ b/public/index.html
@@ -12,25 +12,25 @@
   <meta name="description" content="Self Developed personal website build with React.js">
 
   <!-- Google / Search Engine Tags -->
-  <meta itemprop="name" content="S0umyajit | Portfolio">
+  <meta itemprop="name" content="Abhishek | Portfolio">
   <meta itemprop="description" content="Self Developed personal website build with React.js">
   <meta itemprop="image"
-    content="https://raw.githubusercontent.com/soumyajit4419/Portfolio/master/Images/readme-img.png?token=AK7VCIF5RYEUZZAURELPTAC76U6AK">
+    content="https://photos.google.com/share/AF1QipO7uqDJ4W6YiFGvUD43KNVRhPvLEoSUKZv8F8GCQBvE74gwqUZLjwGtTvKUubxWzw/photo/AF1QipO1QOYuj92IAWAATU0WfDzpds6IL-JjBdOJ9ia1?key=aHZPZ2lVVDBGVWN3aHVORTJOUVBkU0tDc3BpM0dR">
 
   <!-- Facebook Meta Tags -->
-  <meta property="og:url" content="https://soumyajit.vercel.app">
+  <meta property="og:url" content="https://devopsbyabhishek.com">
   <meta property="og:type" content="website">
-  <meta property="og:title" content="S0umyajit | Portfolio">
+  <meta property="og:title" content="Abhishek | Portfolio">
   <meta property="og:description" content="Self Developed personal website build with React.js">
   <meta property="og:image"
-    content="https://raw.githubusercontent.com/soumyajit4419/Portfolio/master/Images/readme-img.png?token=AK7VCIF5RYEUZZAURELPTAC76U6AK">
+    content="https://photos.google.com/share/AF1QipO7uqDJ4W6YiFGvUD43KNVRhPvLEoSUKZv8F8GCQBvE74gwqUZLjwGtTvKUubxWzw/photo/AF1QipO1QOYuj92IAWAATU0WfDzpds6IL-JjBdOJ9ia1?key=aHZPZ2lVVDBGVWN3aHVORTJOUVBkU0tDc3BpM0dR">
 
   <!-- Twitter Meta Tags -->
   <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:title" content="S0umyajit | Portfolio">
+  <meta name="twitter:title" content="Abhishek | Portfolio">
   <meta name="twitter:description" content="Self Developed personal website build with React.js">
   <meta name="twitter:image"
-    content="https://raw.githubusercontent.com/soumyajit4419/Portfolio/master/Images/readme-img.png?token=AK7VCIF5RYEUZZAURELPTAC76U6AK">
+    content="https://photos.google.com/share/AF1QipO7uqDJ4W6YiFGvUD43KNVRhPvLEoSUKZv8F8GCQBvE74gwqUZLjwGtTvKUubxWzw/photo/AF1QipO1QOYuj92IAWAATU0WfDzpds6IL-JjBdOJ9ia1?key=aHZPZ2lVVDBGVWN3aHVORTJOUVBkU0tDc3BpM0dR">
 </head>
 
 <body>
