added graph path

--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,7 @@
   <!-- <link rel="manifest" href="%PUBLIC_URL%/manifest.json" /> -->
   <title>Abhishek | Portfolio</title>
   <meta name="description" content="Self Developed personal website build with React.js">
+  <meta property="og:image" content="%PUBLIC_URL%/protfolio.png" />
 </head>
 
 <body>
